hidden-dragon/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hidden-dragon-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: hidden-dragon
  replicas: 4 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        name: hidden-dragon
    spec:
      containers:
        - name: hidden-dragon
          image: elysianbeats/hidden-dragon
          ports:
            - containerPort: 8080
