hidden-dragon/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hidden-dragon-service
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080 
  selector:
    name: hidden-dragon
