hidden-dragon/ingress.yaml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "hidden-dragon-ingress"
  namespace: "default"
spec:
  backend:
    serviceName: "hidden-dragon-service"
    servicePort: 8080
